Fixed margin and gap issues upon downsizing browser window

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body{
     display: flex;
     justify-content: center;
     flex-shrink: 0;
+    gap: 30px;
 }
 
 .header-container{
@@ -21,15 +22,18 @@ body{
     justify-content: space-between;
     align-items: center;
     flex: 1 0 auto;
+    gap: 30px;
 }
 
 .header-container h4{
-    margin-right: 50px;
+    margin-left: 20px;
+    display: flex;
+    
 }
 
 .header-nav{
     font-size: small;
-    margin-left: 50px;
+    margin-right: 20px;
     display: flex;
     flex-shrink: 0;
 }
